--- a/style.css
+++ b/style.css
@@ -1,16 +1,46 @@
+*{
+  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+}
+
+html{
+  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+}
+
 header{
+  width: 100%;
+  top: 0px;
+  position: fixed;
+  padding: 10px 30px;
   background: rgba(255, 255, 255, 0.9);
 }
+header li{
+  display: inline;
+}
+header a{
+  transition: 0.3s;
+  color: #314669;
+}
+
+header a:hover{
+  transition: 0.3s;
+}
+
+header .pull-right{
+  margin-top: 7px;
+}
 nav{
+
   background-image: url(./public/img/cover.jpg);
   background-size: cover;
-  padding: 100px;
-  padding-top: 150px;
+  padding: 100px 10px;
+  padding-top: 162px;
 }
 body{
   background: #f9fafb;
 }
 footer{
+  color: #aaaaaa;
+  padding: 10px;
   background: #eeeeee;
 }
 
@@ -22,6 +52,14 @@ footer li{
   display: inline;
 }
 
+footer div{
+  margin-top: 5px;
+}
+
+footer a{
+  color: #aaaaaa;
+}
+
 
 #brand_logo{
   display: inline-block;
@@ -30,11 +68,16 @@ footer li{
 
 #shuttlecock_info{
   background-image: url(./public/img/campus.jpg);
-  padding: 200px;
+  padding: 200px 10px;
   color: white;
 }
-#shuttlecock_info img{
+#shuttlecock_info > #example_img{
   width: 300px;
+}
+
+#btn_google_play{
+  margin: 5px 20px;
+  width: 200px;
 }
 
 #partnership{
