--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
-*{
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
-}
-
 html{
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: 'NotoSansKR-Hestia', Helvetica, Arial, sans-serif;
 }
 
 header{
